some task completed

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ILOVE_PDF_PUBLIC_KEY=project_public_a3d1ad8fb49ee2f0f5f2d49f66543b3a_ceShIe3ebc78b810782217722f2d37ae4d5dd
+ILOVE_PDF_SECRET_KEY=secret_key_6c32a2e5d7dfcee031be9ac2c0c1918a_2Clbof2a2dafc9152bef140f9174784e84d94
