--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.0",
         "dompdf/dompdf": "^3.0",
+        "ilovepdf/ilovepdf-php": "^1.2",
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "phpoffice/phpword": "^1.2",
+        "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
         "smalot/pdfparser": "^2.11"
     },
